landing-page/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devver-landing-page
  labels:
    kasten-backup-prod-ns: "true"
