landing-page/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-page-svc
  namespace: devver-landing-page
spec:
  selector:
    app: landing-page
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
