landing-page/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-page-ingress
  namespace: devver-landing-page
  annotations:
    external-dns.alpha.kubernetes.io/target: reverse-proxy.vrhometech.fr
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: traefik
  rules:
  - host: k8s.devver.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing-page-svc
            port:
              number: 80
  tls:
  - hosts:
      - k8s.devver.app
    secretName: landing-page-tls
